@@ -95,16 +95,16 @@
          <device>TrackdControllerDev</device>
          <unit>1</unit>
       </digital_proxy>
-      <display_system name="Pipe Setup" version="2">
+      <display_system name="Pipe Setup" version="3">
          <number_of_pipes>1</number_of_pipes>
-         <x11_pipes>-1</x11_pipes>
-         <x11_pipes>:0.1</x11_pipes>
-         <x11_pipes>:0.1</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
-         <x11_pipes>:0.0</x11_pipes>
+         <pipes>-1</pipes>
+         <pipes>:0.1</pipes>
+         <pipes>:0.1</pipes>
+         <pipes>:0.0</pipes>
+         <pipes>:0.0</pipes>
+         <pipes>:0.0</pipes>
+         <pipes>:0.0</pipes>
+         <pipes>:0.0</pipes>
          <use_swap_group>false</use_swap_group>
       </display_system>
       <user name="User1" version="1">
